deploy/vote/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
  namespace: instavote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  strategy: {}
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: schoolofdevops/vote:error
        name: vote
        resources: {}
