deploy/vote/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vote
    tier: vote
  name: vote
  namespace: instavote
spec:
  ports:
  - name: "80"
    nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vote
  type: NodePort
